cli/testdata/invalid-modules/no-release/cue.mod/module.cue
module: "opm.test/no-release@v0"
language: {
	version: "v0.15.0"
}
deps: {
	"opm.dev/core@v1": {
		v: "v1.0.0"
	}
}
